<resources>

    <string name="app_name">Fight Corona (Corona Shooting)</string>
    <string name="start_fighting">Start Fighting</string>
    <string name="fight_corona">Fight  Corona</string>
    <string name="you_lost">You lost</string>
    <string name="watch_video_and_nresume">Watch video and\nresume</string>
    <string name="try_again">Try Again</string>
    <string name="exit">Exit</string>
    <string name="by_jalees_mukarram">By: Jalees Mukarram</string>
    <string name="stay_home_stay_safe">Stay Home, Stay Safe</string>

</resources>
