<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/corona_bg"
    tools:context=".Splash">


    <Button
        android:id="@+id/BTNSplashStartFighting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVSplashFightShowing"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:background="@drawable/btn_round"
        android:padding="20dp"
        android:text="@string/start_fighting"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TVSplashFightShowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/fight_corona"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorOrange"
        android:textSize="40sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/TVSplashCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/by_jalees_mukarram"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        android:textStyle="bold"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TVSplashCredits"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/stay_home_stay_safe"
        android:textColor="@color/colorWhite" />


</RelativeLayout>