<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dark_abstract">

    <!--    DialogueLost-->

    <TextView
        android:id="@+id/TVDialogueLostScoreShowing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:text="@string/you_lost"
        android:textAlignment="center"
        android:textColor="@color/colorOrange"
        android:textSize="25sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/TVDialogueLostShowAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVDialogueLostScoreShowing"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@color/colorGreen"
        android:drawableStart="@drawable/ic_visibility_24"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/watch_video_and_nresume"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/TVDialogueLostTryAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVDialogueLostShowAd"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"

        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@color/colorYellow"
        android:drawableStart="@drawable/ic_refresh_24"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/try_again"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/TVDialogueLostExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVDialogueLostTryAgain"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorWhite"
        android:drawableStart="@drawable/ic_exit_24"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/exit"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVDialogueLostExit"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/by_jalees_mukarram"
        android:textColor="@color/colorParrotGreen"
        android:textSize="12sp"
        android:textStyle="bold"

        />


</RelativeLayout>